--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,28 @@ services:
       - '5050:5050'
     volumes:
       - ./api:/app
+## serviciile pentru mongo si mongo-express
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: very-strong-db-password
+    volumes: 
+      - mongodb_data:/data/db
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: very-strong-db-password
+## arata containerele care trebuie pornite inainte, de care depinde acesta    
+    depends_on:
+      - mongo  
+
+## se creaza un volum nou in cadrul docker-ului
+volumes: 
+  mongodb_data:
